syntax = "proto3";

package manager.api.manager.department.v1;

option go_package = "./v1;v1";
option java_multiple_files = true;
option java_package = "manager.api.manager.department.v1";
option java_outer_classname = "DepartmentV1";

import "validate/validate.proto";

message DepartmentClassify{
  uint32 id = 1;
  string name = 2;
}

message ListDepartmentClassifyRequest {
  uint32 page = 1[(validate.rules).uint32 = {gt: 0}];
  uint32 pageSize = 2[(validate.rules).uint32 = {gt: 0,lte:50}];
  optional string order = 3[(validate.rules).string = {in: ["asc","desc"]}];
  optional string orderBy = 4[(validate.rules).string = {in: ["id","created_at","updated_at"]}];
  optional string name = 5;
}

message ListDepartmentClassifyReply {
  message DepartmentClassify {
    uint32 id = 1;
    string name = 2;
    optional string description = 3;
    uint32 createdAt = 4;
    uint32 updatedAt = 5;
  }

  uint32 total = 1;
  repeated DepartmentClassify list = 2;
}

message CreateDepartmentClassifyRequest {
  string name = 1[(validate.rules).string = {min_len: 1}];
  optional string description = 2;
}

message CreateDepartmentClassifyReply {
  uint32 id = 1;
}

message UpdateDepartmentClassifyRequest {
  uint32 id = 1[(validate.rules).uint32 = {gt: 0}];
  string name = 2[(validate.rules).string = {min_len: 1}];
  optional string description = 3;
}

message UpdateDepartmentClassifyReply {
}

message DeleteDepartmentClassifyRequest {
  uint32 id = 1[(validate.rules).uint32 = {gte:0}];
}

message DeleteDepartmentClassifyReply {
}

