syntax = "proto3";

package manager.api.manager.department.v1;

option go_package = "./v1;v1";
option java_multiple_files = true;
option java_package = "manager.api.manager.department.v1";
option java_outer_classname = "DepartmentV1";

import "api/manager/department/manager_department_classify.proto";
import "api/manager/department/manager_department.proto";
import "google/api/annotations.proto";

service Department{
  // ListDepartmentClassify 获取部门分类列表
  rpc ListDepartmentClassify (ListDepartmentClassifyRequest) returns (ListDepartmentClassifyReply) {
    option (google.api.http) = {
      get: "/manager/api/v1/department_classifies",
    };
  }

  // CreateDepartmentClassify 创建部门分类
  rpc CreateDepartmentClassify (CreateDepartmentClassifyRequest) returns (CreateDepartmentClassifyReply) {
    option (google.api.http) = {
      post: "/manager/api/v1/department_classify",
      body: "*"
    };
  }

  // UpdateDepartmentClassify 更新部门分类
  rpc UpdateDepartmentClassify (UpdateDepartmentClassifyRequest) returns (UpdateDepartmentClassifyReply) {
    option (google.api.http) = {
      put: "/manager/api/v1/department_classify",
      body: "*"
    };
  }

  // DeleteDepartmentClassify 删除部门分类
  rpc DeleteDepartmentClassify (DeleteDepartmentClassifyRequest) returns (DeleteDepartmentClassifyReply) {
    option (google.api.http) = {
      delete: "/manager/api/v1/department_classify",
    };
  }
  
  // ListDepartment 获取部门信息列表
  rpc ListDepartment (ListDepartmentRequest) returns (ListDepartmentReply) {
    option (google.api.http) = {
      get: "/manager/api/v1/departments",
    };
  }

  // ListDepartment 获取部门信息列表
  rpc ListCurrentDepartment (ListDepartmentRequest) returns (ListDepartmentReply) {
    option (google.api.http) = {
      get: "/manager/api/v1/current/departments",
    };
  }

  // CreateDepartment 创建部门信息
  rpc CreateDepartment (CreateDepartmentRequest) returns (CreateDepartmentReply) {
    option (google.api.http) = {
      post: "/manager/api/v1/department",
      body: "*"
    };
  }

  // UpdateDepartment 更新部门信息
  rpc UpdateDepartment (UpdateDepartmentRequest) returns (UpdateDepartmentReply) {
    option (google.api.http) = {
      put: "/manager/api/v1/department",
      body: "*"
    };
  }

  // DeleteDepartment 删除部门信息
  rpc DeleteDepartment (DeleteDepartmentRequest) returns (DeleteDepartmentReply) {
    option (google.api.http) = {
      delete: "/manager/api/v1/department",
    };
  }

  // GetDepartment 获取指定的部门信息
  rpc GetDepartment (GetDepartmentRequest) returns (GetDepartmentReply) {
    option (google.api.http) = {
      get: "/manager/api/v1/department",
    };
  }

}